--- a/treehouse/CSS_Layout/css/style.css
+++ b/treehouse/CSS_Layout/css/style.css
@@ -18,14 +18,26 @@ a {
 
 /* ---- Layout Containers ---- */
 
+.container {
+	width: 70%;
+	margin: 0 auto;
+}
+
 .main-header {
 	background: #3acec2;
+	padding: 1em 0;
 }
 
 .main-footer {
 	padding: 2em 0;
 	background: #d9e4ea;
+	text-align: center;
+}
+
+.name {
+	margin: 0;
 }
 
 /* ---- Page Elements ---- */
+
 
