--- a/treehouse/CSS_Layout/css/style.css
+++ b/treehouse/CSS_Layout/css/style.css
@@ -2,9 +2,17 @@
   Base Element Styles
 ==================================== */
 
+* {
+  box-sizing: border-box;
+}
+
 body {
 	line-height: 1.6;
 	color: #3a3a3a;
+}
+
+p:last-child {
+	margin-bottom: 0;
 }
 
 a {
@@ -16,28 +24,54 @@ a {
   Base Layout Styles
 ==================================== */
 
+/* ---- Navigation ---- */
+
+.name {
+  margin: 0;
+}
+
 /* ---- Layout Containers ---- */
 
 .container {
-	width: 70%;
-	margin: 0 auto;
+  padding-left: 1em;
+  padding-right: 1em;
 }
 
 .main-header {
+	padding: 1.5em 0;
 	background: #3acec2;
-	padding: 1em 0;
 }
 
 .main-footer {
+	text-align: center;
 	padding: 2em 0;
 	background: #d9e4ea;
-	text-align: center;
 }
 
-.name {
-	margin: 0;
+/* =================================
+  Media Queries
+==================================== */
+
+@media (min-width: 769px) {
+
+	.wrap {
+		min-height: calc(100vh - 89px);
+	}
+
+	.container {
+		width: 70%;
+		max-width: 1000px;
+		margin: 0 auto;
+	}
+
 }
 
-/* ---- Page Elements ---- */
+
+
+
+
+
+
+
 
 
